8. fix z-index popup

--- a/src/react/popups/popup/popup.module.scss
+++ b/src/react/popups/popup/popup.module.scss
@@ -14,7 +14,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 123;
+    z-index: 1000;
     display: none;
 
     &--opened {
